<resources>
    <string name="app_name">VScan</string>

    <!-- ONBOARDING -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="forgot_label">Please enter the email address you\'d like your password reset information sent to.</string>
    <string name="forgot_request">Request to reset link</string>
    <string name="forgot_login">Back To Login</string>

    <string name="logo_description">App Logo</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">Welcome to the App! Please log in to continue.</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="email_hint">Email</string>
    <string name="email_example">example@email.com</string>
    <string name="password_word">Password</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="logoutyes_button">Yes</string>
    <string name="logoutno_button">No</string>
    <string name="goodbyemessage">Thank you for using VSCAN! Your car\'s engine may be off, but we\'ll keep things running smoothly until you\'re back. Logout successful. Drive safe and see you on the road soon!</string>
    <string name="VSCANcredits">© 2025 VSCAN. All rights reserved.</string>
</resources>